# -siteProjCurso

./: extra.html  index.html  mkdocs.yml  pyproject.toml
docs/: extra.md  index.md
docs/stylesheets/: extra.css  mkdocs.yml
site/: 404.html  index.html
site/search/: search_index.json
stylesheets/: extra.css  mkdocs.yml
