[tool.poetry]
name = "siteProjCurso"
version = "0.1.0"
description = ""
authors = ["Joao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
